--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "googleapis": "^100.0.0",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
