--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,8 +1,8 @@
 [
   {
-    "id": "proj001",
+    "id": "proj003",
     "projectName": "Prillare E-commerce",
-    "projectDescription": "<strong>Prillare</strong> is a local small business, with the creation of their e-commerce, we managed to get them to offer a better service and connect more with their customers. </br>You can watch the demo above or visit their site <a href='https://www.prillare.pe' target='_blank'>here</a>.",
+    "projectDescription": "<strong>Prillare</strong> is a local small business, with the creation of their e-commerce, we managed to get them to offer a better service and connect more with their customers. </br>You can watch the demo above or visit their site <a href='https://prillare-ecommerce.herokuapp.com' target='_blank'>here</a>.",
     "imgSrc": "img/project-prillare.png",
     "modalType": "img",
     "modalPath": "img/project-prillare.png",
@@ -27,8 +27,8 @@
   },
   {
     "id": "proj002",
-    "projectName": "Warmi",
-    "projectDescription": "<strong>Warmi</strong> is a safe space for women, you can find more information or suscribe to the newsletter visiting this <a href='https://melissahuertadev.github.io/warmi-webapp/' target='_blank'>site</a> 😊</br>The current webpage was build with JS and Node, the mobile application is being developed with Flutter.",
+    "projectName": "me 2.0",
+    "projectDescription": "Be your 2.0 version! Improve your productivity, organization, and health. <strong>Me 2.0</strong> is a mobile app include tools such as 6jars, pomodoro, habit trackers and so on. <a href='https://warmi-webapp.herokuapp.com' target='_blank'>Download</a> the app 📱</br>The current webpage was build with JS and Node, the mobile application is being developed with Flutter.",
     "imgSrc": "img/project-warmi.png",
     "modalType": "img",
     "modalPath": "img/project-warmi.png",
@@ -52,7 +52,33 @@
     ]
   },
   {
-    "id": "proj003",
+    "id": "proj001",
+    "projectName": "Warmi",
+    "projectDescription": "<strong>Warmi</strong> is a safe space for women, you can find more information or suscribe to the newsletter visiting this <a href='https://warmi-webapp.herokuapp.com' target='_blank'>site</a> 😊</br>The current webpage was build with JS and Node, the mobile application is being developed with Flutter.",
+    "imgSrc": "img/project-warmi.png",
+    "modalType": "mov",
+    "modalPath": "img/project-warmi.mp4",
+    "category": [
+      {
+        "categoryClass": "badge-light",
+        "categoryName": "WebPage"
+      },
+      {
+        "categoryClass": "badge-warning",
+        "categoryName": "JS"
+      },
+      {
+        "categoryClass": "badge-secondary",
+        "categoryName": "Node"
+      },
+      {
+        "categoryClass": "badge-info",
+        "categoryName": "Flutter"
+      }
+    ]
+  },
+  {
+    "id": "proj000",
     "projectName": "Dino Game - JS",
     "projectDescription": "This game is 100% inspired on the Google's Chrome No Internet connection error Dino T-Rex Runner game. This one of course, is <span>purple✨</span><br/>You can watch the demo above or play it <a href='https://melissahuertadev.github.io/dino-game/' target='_blank'>here</a>.",
     "imgSrc": "img/project-dinogame.png",
