--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "googleapis": "^100.0.0",
+    "mongoose": "^6.4.4",
     "nodemailer": "^6.7.2"
   },
   "devDependencies": {
